# tweak_shader_web

./: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
src/: app.html
src/components/: Bool.svelte  Button.svelte  Color.svelte  Dropdown.svelte  Float.svelte  Image.svelte  Input.svelte  Int.svelte  Point.svelte
src/lib/: index.ts  theme.ts
src/routes/: +page.svelte
static/: app.css  compute_multipass.glsl  exit_the_matrix.glsl  image_input.glsl  wiggler.glsl
tweak_shader_wasm/: Cargo.toml
tweak_shader_wasm/src/: external.rs  lib.rs  util.rs
tweak_shader_wasm_lib/: Cargo.toml
tweak_shader_wasm_lib/src/: util.rs
