[package]
name = "tweak_shader_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
tweak_shader = { git = "https://github.com/mobile-bungalow/tweak_shader" }
web-sys = { version = "0.3.77", features = [
    "HtmlCanvasElement",
    "ImageData",
    "Window",
] }
winit = "0.28.7"
web-time = "0.2.3"
js-sys = "0.3.77"
chrono = "0.4.31"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
